# emaillistverify-sdk-python

./: LICENSE  README.md  emaillistverify.py  examples.py  pyproject.toml  setup.py
.github/workflows/: release.yml
emaillistverify/: __init__.py
src/emaillistverify/: __init__.py  client.py
