[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emaillistverify"
version = "1.0.0"
description = "Official Python SDK for EmailListVerify API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "EmailListVerify", email = "support@emaillistverify.com"}]
dependencies = ["httpx>=0.27"]
keywords = ["email", "verification", "validation", "emaillistverify", "sdk"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Email",
]

[project.urls]
Homepage = "https://github.com/EmailListVerify-com/emaillistverify-sdk-python"
Issues = "https://github.com/EmailListVerify-com/emaillistverify-sdk-python/issues"
Documentation = "https://emaillistverify.com/docs/"

[tool.hatch.build.targets.wheel]
packages = ["src/emaillistverify"]